skip using gradle modules, compicates things, now able to package on bintray